crates/swc/tests/tsc-references/internalModules/moduleDeclarations/invalidNestedModules/input.ts/es5.1.normal/output.js
function _classCallCheck(instance, Constructor) {
    if (!(instance instanceof Constructor)) {
        throw new TypeError("Cannot call a class as a function");
    }
}
var A;
(function(A) {
    var B;
    (function(B) {
        var C = function C() {
            "use strict";
            _classCallCheck(this, C);
        };
        B.C = C;
    })(B || (B = {
    }));
    A.B = B;
})(A || (A = {
}));
var M2;
(function(M2) {
    var X;
    (function(X) {
        var Point;
        X.Point = Point;
    })(X || (X = {
    }));
    M2.X = X;
})(M2 || (M2 = {
}));
